# junho-data-platform

./: .env.example  .gitignore  CLUSTER_GUIDE.md  LICENSE  README.md  deploy_desktop.sh  docker-compose.desktop.yml  docker-compose.laptop.yml  docker-compose.yml  e2e_test.py  run_backfill_timeseries.sh  run_full_backfill.sh  setup_desktop_network.ps1  setup_port_forwarding.ps1  start_desktop.sh  start_laptop.sh  stop_desktop.sh  stop_laptop.sh  verify_data.py  verify_smc_api.py
airflow/: Dockerfile  requirements.txt
apps/rag-server/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/rag-server/ingest/: __init__.py  claude_jsonl.py  common.py  markdown.py  run.py  secret_scrubber.py
apps/rag-server/rag_server/: __init__.py  chunking.py  config.py  db.py  embedding.py  main.py  mcp_tools.py  retrieve.py  schema.py
apps/rag-server/scripts/: backup_rag.sh  priority_embed_notes.py  reembed_missing.py  reembed_worker_daemon.py  smoke_search.py
apps/trade-backend/: pyproject.toml  seed_data.py  seed_themes.py
apps/trade-backend/app/: auth.py  database.py  main.py
apps/trade-backend/app/models/: base.py
apps/trade-backend/app/routers/: agent.py  analysis.py  analytics.py  dq.py  favorites.py  klines.py  listing.py  screener.py  settings.py  smc.py  system.py  theme.py  whale.py
apps/trade-backend/app/services/: smc_analyzer.py
backend/: Dockerfile  pyproject.toml
deploy/: docker-compose.prod.yml  nginx.conf  tunnel-config.yml  update_dns.py
docs/: 00_overview.md  05_task_plan.md  07_db_ddl.sql  ARCHITECTURE.md  DATA_LINEAGE.md  MINIO_GUIDE.md  (+9 more)
(+835 files in other folders)
