[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-server"
version = "0.1.0"
description = "Personal RAG + remote MCP server for junho-data-platform"
requires-python = ">=3.12"
dependencies = [
    "fastmcp[auth]>=2.0",
    "psycopg2-binary>=2.9",
    "voyageai>=0.3",
    "pgvector>=0.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_server*", "ingest*"]

[tool.ruff]
line-length = 100
target-version = "py312"
